add options for optional components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,23 +64,29 @@ include(${VXL_CMAKE_DIR}/UseVXL.cmake)
 
 ### OPTIONAL Packages
 
-find_package(viscl)
-if(viscl_FOUND)
-  message(STATUS "[main] Found VisCL optional package")
-  include_directories(${viscl_INCLUDE_DIR})
-  include_directories(SYSTEM ${viscl_OPENCL_INCLUDE_DIRS})
-  link_directories(${VISCL_LIBRARY_DIRS})
-  message(STATUS "VisCL Library dir: ${viscl_LIBRARY_DIR}")
-  message(STATUS "VisCL Include dir: ${viscl_INCLUDE_DIR}")
+option(Super3D_ENABLE_VisCL "Build optional OpenCL acceleration using VisCL" OFF)
+if(Super3D_ENABLE_VisCL)
+  find_package(viscl)
+  if(viscl_FOUND)
+    message(STATUS "[main] Found VisCL optional package")
+    include_directories(${viscl_INCLUDE_DIR})
+    include_directories(SYSTEM ${viscl_OPENCL_INCLUDE_DIRS})
+    link_directories(${VISCL_LIBRARY_DIRS})
+    message(STATUS "VisCL Library dir: ${viscl_LIBRARY_DIR}")
+    message(STATUS "VisCL Include dir: ${viscl_INCLUDE_DIR}")
+  endif()
 endif()
 
-find_package(VTK 6.2)
-if(VTK_FOUND)
-  message(STATUS "[main] Found VTK optional package")
-  message(STATUS "VTK use file: ${VTK_USE_FILE}")
-  include(${VTK_USE_FILE})
-  include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
-  link_directories(${VTK_LIBRARY_DIRS})
+option(Super3D_ENABLE_VTK "Build optional VTK visualization and IO" OFF)
+if(Super3D_ENABLE_VTK)
+  find_package(VTK 6.2)
+  if(VTK_FOUND)
+    message(STATUS "[main] Found VTK optional package")
+    message(STATUS "VTK use file: ${VTK_USE_FILE}")
+    include(${VTK_USE_FILE})
+    include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
+    link_directories(${VTK_LIBRARY_DIRS})
+  endif()
 endif()
 
 
